# simple-python-boilerplate

./: .containerignore  .dockerignore  .editorconfig  .gitattributes  .gitconfig.recommended  .gitignore  .gitmessage.txt  .lycheeignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .repo-doctor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  SECURITY.md  Taskfile.yml  _typos.toml  codecov.yml  commit-report.md  container-structure-test.yml  coverage.json  customize-config.md  customize-report.md  dep-versions-report.md  docker-compose.yml  git-config-reference.md  mkdocs.yml  pgp-key.asc  pyproject.toml  release-please-config.json  repo-sauron-report.md  requirements-dev.txt  requirements.txt  simple-python-boilerplate.code-workspace  test-config-ref.md
.devcontainer/: README.md  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  SKILL.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  bug_report.yml.disabled  config.yml  design_proposal.md  design_proposal.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml  general.md  general.yml  other.md  other.yml  performance.md  performance.yml  question.md  question.yml  refactor_request.md  refactor_request.yml  test_failure.md  test_failure.yml
.github/instructions/: collectors.instructions.md  dashboard-css.instructions.md  dashboard-templates.instructions.md  dashboard.instructions.md  python.instructions.md  tests.instructions.md
.github/workflows/: .instructions.md  README.md  _dependency-review.yml  _docs.yml  _labeler.yml  _release.yml  _spellcheck-autofix.yml  _spellcheck.yml  auto-merge-dependabot.yml  bandit.yml  cache-cleanup.yml  changelog.yml  ci-gate.yml  ci.yml  codeql.yml  commit-lint.yml  container-build.yml  container-scan.yml  coverage.yml  dependency-review.yml  devcontainer-build.yml  docs-build.yml  docs-deploy.yml  docs.yml  doctor-all.yml  known-issues-check.yml  labeler.yml  license-check.yml  link-checker.yml  lint-format.yml  lint.yml  nightly-security.yml  pr-title.yml  pre-commit-update.yml  regenerate-files.yml  release-please.yml  release.yml  repo-doctor.yml  sbom.yml  scorecard.yml  (+10 more)
.github/workflows-optional/: README.md  changelog.yml
db/: README.md  schema.sql
db/migrations/: 001_example_migration.sql  README.md
db/queries/: README.md  example_queries.sql
db/seeds/: 001_example_seed.sql  README.md
docs/: .instructions.md  README.md  USING_THIS_TEMPLATE.md  adoption-checklist.md  dev-setup.md  development.md  index.md  known-issues.md  labels.md  release-policy.md  releasing.md  repo-layout.md  sbom.md  tooling.md  workflows.md
docs/adr/: .instructions.md  001-src-layout.md  002-pyproject-toml.md  003-separate-workflow-files.md  004-pin-action-shas.md  005-ruff-for-linting-formatting.md  006-pytest-for-testing.md  007-mypy-for-type-checking.md  008-pre-commit-hooks.md  009-conventional-commits.md  010-dependabot-for-dependency-updates.md  011-repository-guard-pattern.md  012-multi-layer-security-scanning.md  013-sbom-bill-of-materials.md  014-no-template-engine.md  015-no-github-directory-readme.md  016-hatchling-and-hatch.md  017-task-runner.md  018-bandit-for-security-linting.md  019-containerfile.md  020-mkdocs-documentation-stack.md  021-automated-release-pipeline.md  022-rebase-merge-strategy.md  023-branch-protection-rules.md  024-ci-gate-pattern.md  025-container-strategy.md  026-no-pip-tools.md  027-database-strategy.md  028-git-branching-strategy.md  029-testing-strategy.md  030-label-management-as-code.md  031-script-conventions.md  032-dependency-grouping-strategy.md  033-prettier-for-markdown-formatting.md  034-documentation-organization-strategy.md  035-copilot-instructions-as-context.md  036-diagnostic-tooling-strategy.md  037-git-configuration-as-code.md  038-vscode-workspace-configuration-strategy.md  039-developer-onboarding-automation.md  (+7 more)
docs/blueprints/: 001-env-inspect-web-dashboard.md  README.md  template.md
docs/design/: README.md  architecture.md  ci-cd-design.md  database.md  tool-decisions.md
docs/development/: README.md  branch-workflows.md  command-workflows.md  dev-setup.md  developer-commands.md  development.md  pull-requests.md
docs/examples/: BUG_BOUNTY.md  SECURITY_no_bounty.md  SECURITY_with_bounty.md
docs/explorations/: 001-env-inspect-web-dashboard.md  README.md  template.md
docs/guide/: README.md  dashboard-guide.md  entry-points.md  getting-started.md  troubleshooting.md
docs/implementation-plans/: 001-env-inspect-web-dashboard.md  README.md  template.md
docs/mkdocs/: index.md
docs/notes/: README.md  archive.md  how-to-edit-web-ui.md  learning-web-apps.md  learning.md  pico-css.md  resources.md  resources_links.md  resources_written.md  todo.md  tool-comparison.md  web-dev-questions.md
docs/reference/: README.md  api.md  commands.md  index.md  scripts.md  (+1 more)
experiments/: README.md  example_api_test.py  example_data_exploration.py
hooks/: repo_links.py
labels/: baseline.json  extended.json
mkdocs-hooks/: README.md  generate_commands.py  include_templates.py  repo_links.py
repo_doctor.d/: README.md  ci.toml  container.toml  db.toml  docs.toml  python.toml  security.toml
scripts/: .instructions.md  README.md  _colors.py  _container_common.py  _doctor_common.py  _imports.py  _progress.py  _ui.py  apply-labels.sh  apply_labels.py  archive_todos.py  bootstrap.py  changelog_check.py  check_known_issues.py  check_nul_bytes.py  check_python_support.py  check_todos.py  clean.py  customize.py  dep_versions.py  doctor.py  env_doctor.py  env_inspect.py  generate_command_reference.py  git_doctor.py  repo_doctor.py  repo_sauron.py  test_containerfile.py  test_containerfile.sh  test_docker_compose.py  test_docker_compose.sh  workflow_versions.py
site/: 404.html  index.html  objects.inv
src/: ENTRY_POINTS.md  README.md
tests/: .instructions.md  README.md  conftest.py  unit_test.py
var/: README.md  app.example.sqlite3
(+170 files in other folders)
