# ============================================================================
# BUILD SYSTEM
# ============================================================================
# PEP 517/518 configuration - tells pip HOW to build your package
[build-system]
requires = ["hatchling", "hatch-vcs"]   # Build backend + VCS version plugin
build-backend = "hatchling.build"       # Hatchling builds the package

# ============================================================================
# PROJECT METADATA
# ============================================================================
[project]
name = "simple-python-boilerplate"
dynamic = ["version"]                   # Version derived from git tags via hatch-vcs
description = "Simple Python boilerplate using src/ layout"
readme = "README.md"                    # Relative to pyproject.toml → root README.md
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Joseph"}]

# Keywords for PyPI search discoverability
keywords = [
    # "cli",
    # "automation",
    # "utilities",
]

# PyPI classifiers - see: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.14",  # Uncomment when CI matrix includes 3.14
    # "Topic :: Software Development :: Libraries",
    # "Topic :: Utilities",
    "Typing :: Typed",
]

# Runtime dependencies - installed automatically with: pip install -e .
dependencies = [
    # Add your project's runtime dependencies here, e.g.:
    # "requests>=2.28",
    # "click>=8.0",
]

# Project URLs - shown on PyPI sidebar
[project.urls]
# Homepage = "https://github.com/username/simple-python-boilerplate"
# Repository = "https://github.com/username/simple-python-boilerplate"
# Documentation = "https://simple-python-boilerplate.readthedocs.io"
# Changelog = "https://github.com/username/simple-python-boilerplate/blob/main/CHANGELOG.md"
# "Bug Tracker" = "https://github.com/username/simple-python-boilerplate/issues"

# CLI entry point - run with: spb
[project.scripts]
spb = "simple_python_boilerplate.main:main"
spb-version = "simple_python_boilerplate.main:print_version"
spb-doctor = "simple_python_boilerplate.main:doctor"

# GUI entry points (no console window on Windows)
# [project.gui-scripts]
# spb-gui = "simple_python_boilerplate.gui:main"

# Plugin/extension entry points - let other packages discover yours
# [project.entry-points."some_framework.plugins"]
# my_plugin = "simple_python_boilerplate.plugins:MyPlugin"

# Extra dependencies installed with: pip install -e ".[dev]"
# NOTE: These are the SINGLE SOURCE OF TRUTH for all dev/test tools.
# Hatch environments consume these via `features = [...]` (see below).
# Dependabot reads these to auto-update tool versions via PEP 621.
[project.optional-dependencies]
test = [
    "pytest",  # Testing framework (v9.0.2)
    "pytest-cov",  # Code coverage for pytest (v7.0.0)
    # "pytest-asyncio",  # For async test support
    # "pytest-mock",     # Mocking utilities
    # "hypothesis",      # Property-based testing
]
dev = [
    "simple-python-boilerplate[test]",  # Include test deps (update this if you rename the project)
    "ruff",  # Fast linter and formatter (v0.15.0)
    "mypy",  # Static type checker (v1.19.1)
    "pre-commit",  # Git hooks for automated checks (v4.5.1)
    "bandit",  # Security linter (v1.9.3)
    "commitizen",  # Conventional commit helper + validator (v4.4.1)
    "deptry",  # Dependency hygiene — unused, missing, transitive deps (v0.22.0)
]
# Helpful but not required tools: pip install -e ".[extras]"
extras = [
    "pipdeptree",  # Visualize dependency tree: python -m pipdeptree (v2.30.0)
    # "pip-tools",  # Pin dependencies: pip-compile pyproject.toml
    # "pip-audit",  # Check for security vulnerabilities in dependencies
    # "rich",       # Pretty console output for debugging
    # "icecream",   # Better print debugging: ic(variable)
    # "ipython",    # Enhanced interactive Python shell
    # "devtools",   # Debug utilities: debug(variable)
]
docs = [
    "mkdocs>=1.6",  # Documentation site generator (v1.6.1)
    "mkdocs-material>=9.4",  # Material theme (palette toggle, code copy, etc.) (v9.7.1)
    "pymdown-extensions>=10.0",  # Markdown enhancements (tabbed alternate_style) (v10.20.1)
    "mkdocstrings[python]>=0.27",  # Auto-generate docs from docstrings (mkdocstrings v0.29.1, handler: mkdocstrings-python v1.0.3)
]

# ============================================================================
# HATCH CONFIG
# ============================================================================
# Hatchling auto-discovers packages in src/ layout — no extra config needed.
# See: https://hatch.pypa.io/latest/config/build/

# ── Hatch environments ────────────────────────────────────────
# Hatch manages virtual environments. Run commands with: hatch run <cmd>
# or enter a shell with: hatch shell
#
# DEPENDENCY STRATEGY:
#   Hatch envs use `features` to install extras from [project.optional-dependencies]
#   instead of duplicating dependency lists. This means:
#     1. [project.optional-dependencies] is the single source of truth
#     2. Dependabot can auto-update all tool versions
#     3. Both `pip install -e ".[dev]"` and `hatch shell` get the same deps
#
# IMPORTANT NUANCE — adding vs removing dependencies:
#   Adding a dependency is straightforward: edit pyproject.toml and run
#   any hatch command — Hatch syncs and installs automatically.
#
#   Removing a dependency is trickier: some setups/versions may leave the
#   old package installed in the env. The reliable cleanup is to recreate
#   the environment:
#     hatch env remove default    # remove a specific env
#     hatch env prune             # remove ALL envs
#   Then the next hatch command rebuilds a clean env.

# Default environment — used by `hatch shell` and `hatch run <cmd>`
[tool.hatch.envs.default]
features = ["dev"]  # Installs [project.optional-dependencies].dev (includes test deps)

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
test-cov = "pytest --cov=simple_python_boilerplate --cov-report=term-missing {args}"
lint = "ruff check {args: src/ tests/}"
lint-fix = "ruff check --fix {args: src/ tests/}"
fmt = "ruff format {args: src/ tests/}"
fmt-check = "ruff format --check {args: src/ tests/}"
typecheck = "mypy {args: src/}"
check = ["lint", "fmt-check", "typecheck", "test"]
clean = "python -m simple_python_boilerplate.dev_tools.clean {args}"

# ── Docs environment — build and serve documentation ──────────
# Usage:
#   hatch run docs:serve   # Live-reload dev server at http://127.0.0.1:8000
#   hatch run docs:build   # Build static site (strict mode)
[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve {args}"
build = "mkdocs build --strict {args}"

# ── Test matrix — run tests across multiple Python versions ───
# Usage:
#   hatch run test:run           # Run tests on all Python versions
#   hatch run test:cov           # Run tests with coverage on all versions
#   hatch run +py=3.12 test:run  # Run on a specific version only
#   hatch env show               # Show all environments and their matrices
[tool.hatch.envs.test]
features = ["test"]  # Installs [project.optional-dependencies].test

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.12", "3.13"]  # Keep aligned with CI matrix and classifiers

[tool.hatch.envs.test.scripts]
run = "pytest {args}"
cov = "pytest --cov=simple_python_boilerplate --cov-report=term-missing {args}"

# Include non-Python files in your package (e.g., data files, configs)
# [tool.hatch.build.targets.wheel]
# packages = ["src/simple_python_boilerplate"]
# [tool.hatch.build.targets.wheel.force-include]
# "data" = "simple_python_boilerplate/data"

# Control exactly which files go into the sdist and wheel.
# NOTE: When both include and exclude match a path, exclude wins.
# When commented out, Hatch uses its defaults (auto-discovers src/ layout,
# excludes common junk like __pycache__/, .git/, etc.). These only take
# effect when uncommented.
#
# [tool.hatch.build.targets.sdist]
# include = [
#     "src/",
#     "tests/",
#     "pyproject.toml",
#     "README.md",
#     "LICENSE",
#     "CHANGELOG.md",
# ]
# exclude = [
#     "*.pyc",
#     "__pycache__/",
#     ".git/",
#     ".venv/",
#     ".mypy_cache/",
#     ".ruff_cache/",
# ]

# Control exactly which files go into the wheel (built distribution)
# [tool.hatch.build.targets.wheel]
# include = [
#     "src/simple_python_boilerplate/",
# ]
# exclude = [
#     "*.pyc",
#     "__pycache__/",
# ]

# After building with `hatch build`, inspect contents:
#   wheel: python -m zipfile -l dist/*.whl
#   sdist: tar -tf dist/*.tar.gz

# ── Version from git tags (hatch-vcs) ─────────────────────────
# Version is derived from the latest git tag matching "v*".
# At build time, hatch-vcs reads the tag and generates _version.py.
# release-please creates these tags automatically on release.
# Fallback is used when building outside a git repo (e.g., sdist).
[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+unknown"

[tool.hatch.build.hooks.vcs]
version-file = "src/simple_python_boilerplate/_version.py"

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

# -- Pytest --
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"  # Quiet output
# addopts = "-v --cov=simple_python_boilerplate --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# -- Coverage --
[tool.coverage.run]
source = ["src"]
branch = true
# omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
# TODO (template users): Set your coverage floor. 80% is a reasonable
# starting point — raise it as your test suite matures.
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
    "raise NotImplementedError",
]

# -- Ruff (linter/formatter) --
[tool.ruff]
line-length = 88
target-version = "py311"
# src = ["src", "tests"]  # Mark these as first-party for import sorting
# exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D", "T20"]  # E=errors, F=pyflakes, I=imports, UP=pyupgrade, D=pydocstyle, T20=flake8-print (no print/pprint)
ignore = [
    "E501",   # Ignore line length limit
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # Conflicts with D211 (no-blank-line-before-class)
    "D213",   # Conflicts with D212 (multi-line-summary-second-line)
]
# Extended rule sets to consider:
# select = [
#     "E",      # pycodestyle errors
#     "W",      # pycodestyle warnings
#     "F",      # Pyflakes
#     "I",      # isort (import sorting)
#     "UP",     # pyupgrade (modernize syntax)
#     "D",      # pydocstyle (docstring conventions)
#     "B",      # flake8-bugbear (common bugs)
#     "C4",     # flake8-comprehensions
#     "SIM",    # flake8-simplify
#     "ARG",    # flake8-unused-arguments
#     "PTH",    # flake8-use-pathlib
#     "ERA",    # eradicate (commented-out code)
#     "PL",     # Pylint
#     "RUF",    # Ruff-specific rules
# ]
# ignore = ["E501"]  # Ignore specific rules

[tool.ruff.lint.pydocstyle]
convention = "google"  # Enforce Google-style docstrings

[tool.ruff.lint.per-file-ignores]
# Allow print() and skip docstring rules in tests, scripts, and experiments
"tests/**" = ["T20", "D"]
"scripts/**" = ["T20", "D"]
"experiments/**" = ["T20", "D"]

[tool.ruff.lint.isort]
known-first-party = ["simple_python_boilerplate"]

# -- Mypy (type checker) --
[tool.mypy]
python_version = "3.11"
strict = true  # Enable all strict type checking options
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true

# Per-module overrides
# [[tool.mypy.overrides]]
# module = "tests.*"
# disallow_untyped_defs = false

# Ignore missing stubs for third-party libraries
# [[tool.mypy.overrides]]
# module = ["requests.*", "some_untyped_library.*"]
# ignore_missing_imports = true

# ============================================================================
# OTHER TOOL CONFIGURATIONS (uncomment as needed)
# ============================================================================

# runtime configuration for your package (e.g., logging, feature flags)
# -- Bandit (security linter) --
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Skip assert warnings (asserts are fine outside production code)

# -- deptry (dependency hygiene) --
# Only scans src/ for imports.  Dev/test/docs/extras groups are CLI tools —
# they're not imported in source code, so we tell deptry they're dev deps.
[tool.deptry]
extend_exclude = ["scripts", "experiments", "docs", "site"]
# Tell deptry which [project.optional-dependencies] groups are dev/tool deps
# so it doesn't flag them as DEP002 ("defined but not used in src/").
pep621_dev_dependency_groups = ["test", "dev", "extras", "docs"]
# DEP004: the dev group references "simple-python-boilerplate[test]" (self),
# which makes deptry think self-imports are "dev dependency used in src/".
ignore = ["DEP004"]
# Suppress "Assuming the corresponding module name" warnings for packages
# whose module name doesn't match the PyPI distribution name.
package_module_name_map = { pipdeptree = "pipdeptree", mkdocs = "mkdocs", mkdocs-material = "material", pymdown-extensions = "pymdownx", mkdocstrings = "mkdocstrings" }

# -- Black (formatter) - if not using Ruff format --
# [tool.black]
# line-length = 88
# target-version = ["py311"]

# -- isort (import sorting) - if not using Ruff --
# [tool.isort]
# profile = "black"
# known_first_party = ["simple_python_boilerplate"]

# -- Pyright (alternative type checker, used by Pylance in VS Code) --
# [tool.pyright]
# pythonVersion = "3.11"
# typeCheckingMode = "strict"
# reportMissingImports = true
# reportMissingTypeStubs = false

# -- Commitizen (commit conventions + validation) --
# Used locally via `cz commit` and as a pre-commit hook for commit-msg validation.
# Version bumping and changelog are handled by release-please, not commitizen.
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"                # Read version from git tags (matches hatch-vcs)
tag_format = "v$version"                # Tags created by release-please: v1.2.3
update_changelog_on_bump = false        # release-please manages CHANGELOG.md
major_version_zero = true               # Allow breaking changes without major bump while < 1.0

# ============================================================================
# NOTES FOR BOILERPLATE USERS
# ============================================================================
# 1. Create py.typed file in src/simple_python_boilerplate/ for PEP 561 typed package
#    AND ensure it's included in the wheel — see [tool.hatch.build.targets.wheel] above
# 2. Consider using pre-commit hooks - see .pre-commit-config.yaml
# 3. For dynamic versioning, consider: setuptools-scm, hatch-vcs, or semantic-release
# 4. Test your package build with: python -m build
# 5. Check package metadata with: python -m pip show simple-python-boilerplate

# ============================================================================
# PRE-COMMIT HOOKS (for local linting/formatting before commits)
# ============================================================================
# Pre-commit runs checks automatically before each git commit.
# This catches issues early, before they reach CI.
#
# SETUP STEPS:
#   1. Install pre-commit: pip install pre-commit
#   2. Create .pre-commit-config.yaml in project root (see below)
#   3. Install hooks: pre-commit install
#   4. (Optional) Run on all files: pre-commit run --all-files
#
# Example .pre-commit-config.yaml content:
# ----------------------------------------
# repos:
#   - repo: https://github.com/astral-sh/ruff-pre-commit
#     rev: v0.6.9
#     hooks:
#       - id: ruff          # Linting with auto-fix
#         args: [--fix]
#       - id: ruff-format   # Code formatting
#
#   - repo: https://github.com/codespell-project/codespell
#     rev: v2.3.0
#     hooks:
#       - id: codespell     # Spell checking
# ----------------------------------------
